Missing meta support in new depsgraph #48434

Closed
opened 2016-05-14 20:57:04 +02:00 by Jefferson Rausseo · 6 comments

System Information
GNU/Linux Manjaro 64bits
Nvidia 8600gt

Blender Version
Blender 2.77 b9996a3

Short description of error
When you have metaballs with different parent is not properly update the viewport to move some parent.

Exact steps for others to reproduce the error

  • Moves the empty A, should not move the metaball B.
  • Moves the empty B, should move the metaball B.

There are differences between the viewport and render result by moving the parent B.

viewport vs render.png

error.blend

**System Information** GNU/Linux Manjaro 64bits Nvidia 8600gt **Blender Version** Blender 2.77 b9996a3 **Short description of error** When you have metaballs with different parent is not properly update the viewport to move some parent. **Exact steps for others to reproduce the error** - Moves the empty A, should not move the metaball B. - Moves the empty B, should move the metaball B. There are differences between the viewport and render result by moving the parent B. ![viewport vs render.png](https://archive.blender.org/developer/F311969/viewport_vs_render.png) [error.blend](https://archive.blender.org/developer/F311971/error.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @jefrau

Added subscriber: @jefrau

Added subscribers: @Sergey, @ideasman42

Added subscribers: @Sergey, @ideasman42

I was able to redo this by passing --enable-new-depsgraph.
This raises an assert in debug mode.

This works with the old (default) depsgraph.

assigning to @Sergey

I was able to redo this by passing `--enable-new-depsgraph`. This raises an assert in debug mode. This works with the old (default) depsgraph. assigning to @Sergey
Campbell Barton changed title from The viewport is not updated correctly when moving metaballs with parents to Missing meta support in new depsgraph 2016-05-16 14:36:00 +02:00

This issue was referenced by 6cf7cc3393

This issue was referenced by 6cf7cc3393f976df64476666c6b3dc95f796f535

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48434
No description provided.