Fix T48434: Missing meta support in new depsgraph